tests/testWorkflows/invalid_workflows/tooManyStepInputsWorkflow.playbook
{
    "name": "tooManyStepInputsWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "start": "start",
            "steps": [
                {
                    "action": "returnPlusOne",
                    "app": "HelloWorld",
                    "inputs": [
                        {
                            "name": "number",
                            "value": "1"
                        },
                        {
                            "name": "number2",
                            "value": "2"
                        }
                    ],
                    "name": "1",
                    "next": [],
                    "position": {},
                    "risk": 0,
                    "widgets": []
                },
                {
                    "action": "helloWorld",
                    "app": "Invalid",
                    "device": "hwTest",
                    "inputs": [],
                    "name": "start",
                    "next": [
                        {
                            "flags": [
                                {
                                    "action": "regMatch",
                                    "args": [
                                        {
                                            "name": "regex",
                                            "value": "(.*)"
                                        }
                                    ],
                                    "filters": [
                                        {
                                            "action": "length",
                                            "args": []
                                        }
                                    ]
                                }
                            ],
                            "name": "1",
                            "status": "Success"
                        }
                    ],
                    "position": {},
                    "risk": 0,
                    "widgets": []
                }
            ]
        }
    ]
}